# common-http-server-rs

./: Cargo.toml  LICENSE  Prompts.md  README.md  todo.md
.github/workflows/: ci.yml
doc/: ARCHITECTURE_REDESIGN.md  AUTH_GUIDE.md  CORS_GUIDE.md  FRAMEWORK_ROADMAP.md  HTTP_PANEL_GUIDE.md  MONITORING_GUIDE.md  PROTECTION_GUIDE.md  PUBLISHING.md  README.md  SAMPLES.md  SECURITY_NOTES.md  WEBSOCKET_GUIDE.md
doc/internal/: DEVELOPMENT_PLAN.md  repair.md
docs_issue/: redundancy_simplification_findings_2026-02-28.md  redundancy_simplification_fix_plan_2026-02-26.md  release_preflight_findings_2026-02-25.md  resolved__Q20260301-01__204响应包含消息体.md
examples/: jwt_with_client.rs  level1_basic.rs  level2_app_config.rs  level3_security_and_monitoring.rs  level4_graceful_shutdown.rs  level5_terminal_ui.rs  level6_websocket_http_panel.rs  websocket_group_events.rs
http-panel/: Cargo.toml  README.md
http-panel/src/: lib.rs
http-socket/: Cargo.toml  UPSTREAM.md
http-socket/doc_dev/: README.md
http-socket/examples/: axum_http_socket_server.rs  http_socket_client.rs
http-socket/src/: lib.rs
http-socket/src/integration/: axum.rs
http-socket/src/protocol/handshake/: message.rs
src/: lib.rs  main.rs  monitoring.rs  websocket.rs
src/auth/: config.rs
src/core/: app.rs  client_ip.rs  logging.rs  middleware_orchestrator.rs  mod.rs  path_utils.rs  response.rs  runtime_layers.rs  server.rs
src/core/runtime_ui/: app.rs  state.rs
src/protection/: ddos_protection.rs  size_limit.rs
websocket/: Cargo.toml  README.md
websocket/examples/: websocket_cs_demo.rs  websocket_cs_state_dashboard.rs  websocket_group_events.rs
websocket/src/: client.rs  lib.rs  protocol.rs  server.rs
