[package]
name = "common-http-server-rs"
version = "0.1.0"
edition = "2024"
description = "Reusable Axum-based HTTP server scaffold with auth, protection, and monitoring"
readme = "README.md"
repository = "https://github.com/alone-wolf/common-http-server-rs"
homepage = "https://github.com/alone-wolf/common-http-server-rs"
documentation = "https://docs.rs/common-http-server-rs"
license = "MIT"
keywords = ["axum", "http", "server", "middleware", "rust"]
categories = ["web-programming::http-server", "network-programming"]
exclude = [
    "doc/internal/**",
    "Prompts.md",
    "logs/**",
    ".idea/**",
    "websocket/**",
    "http-panel/**",
]

[workspace]
members = [".", "websocket", "http-panel"]
resolver = "2"

[dependencies]
axum = "0.8.8"
http = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "signal", "io-std", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
bcrypt = "0.18.0"
thiserror = "2.0.18"
serde_json = "1.0.128"
# Rate limiting and protection dependencies
governor = "0.10.4"
dashmap = "6.1.0"
ipnet = "2.10.1"
bytes = "1.10.0"
futures-util = "0.3"
http-body-util = "0.1"
# Monitoring and metrics dependencies
prometheus = "0.14.0"
sysinfo = "0.38.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"], optional = true }
redis = { version = "1.0.4", features = ["tokio-comp"], optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }

[features]
default = []
database-health = ["sqlx"]
redis-health = ["redis"]
external-health = ["reqwest"]
full-health = ["database-health", "redis-health", "external-health"]

[dev-dependencies]
websocket = { path = "websocket", default-features = false, features = ["server"] }
http_panel = { package = "http-panel", path = "http-panel" }
