[package]
name = "websocket"
version = "0.1.0"
edition = "2024"
description = "WebSocket group/event module for common-http-server-rs with split server/client features"
readme = "README.md"
repository = "https://github.com/alone-wolf/common-http-server-rs"
homepage = "https://github.com/alone-wolf/common-http-server-rs"
documentation = "https://docs.rs/websocket"
license = "MIT"
keywords = ["websocket", "axum", "tokio", "group", "event"]
categories = ["web-programming::http-server", "network-programming"]

[features]
default = ["full"]
server = [
    "dep:axum",
    "dep:chrono",
    "dep:futures-util",
    "dep:tokio",
    "dep:tracing",
    "dep:uuid",
    "dep:common-http-server-rs",
]
client = [
    "dep:futures-util",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:http",
    "dep:base64",
]
full = ["server", "client"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
axum = { version = "0.8", features = ["ws"], optional = true }
chrono = { version = "0.4", optional = true }
futures-util = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync", "rt", "net"], optional = true }
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tokio-tungstenite = { version = "0.28", optional = true }
http = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
common-http-server-rs = { path = "..", version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
